# internal/handler/book_mark_handler.go
@@ -1,7 +1,9 @@
 package handler
 
 import (
+	"errors"
 	"github.com/gin-gonic/gin"
+	"github.com/rs/zerolog/log"
 	"lesson01-ebvn/internal/handler/dto"
 	"lesson01-ebvn/internal/service"
 	"net/http"
@@ -35,6 +37,7 @@ func (b *BookMarkHandler) HealthCheck(ctx *gin.Context) {
 
 // @Summary ShorttenURL
 // @Description Accepts a long URL and an expiration time, then generates a shortened key.
+// @Param        request  body      dto.ShortenReq  true  "URL to be shortened and expiration time"
 // @Tags shortenURL
 // @Success 200 {object} map[string]interface{} "Success"
 // @Router /v1/links/shorten [post]
@@ -49,6 +52,7 @@ func (b *BookMarkHandler) ShortenURL(ctx *gin.Context) {
 	}
 	code, err := b.service.GenerateKey(ctx, input.Url, input.Exp)
 	if err != nil {
+		log.Error().Err(err).Msg(err.Error())
 		ctx.JSON(http.StatusInternalServerError, gin.H{
 			"message": err.Error(),
 			"code":    http.StatusInternalServerError,
@@ -59,4 +63,43 @@ func (b *BookMarkHandler) ShortenURL(ctx *gin.Context) {
 		"code":    code,
 		"message": "Shorten URL generated successfully!",
 	})
+}
+
+// Redirect godoc
+// @Summary      Redirect to original URL
+// @Description  Retrieve the original URL from the short code and redirect the client to it
+// @Tags         Redirect
+// @Accept       json
+// @Produce      json
+// @Param        code  path      string  true  "Short URL Code"
+// @Success      307   {string}  string  "Redirect to original URL"
+// @Failure      400   {object}  map[string]string "code is required"
+// @Failure      404   {object}  map[string]string "url not found"
+// @Failure      500   {object}  map[string]string "internal server error"
+// @Router       /v1/links/redirect/{code} [get]
+func (b *BookMarkHandler) Redirect(ctx *gin.Context) {
+	code := ctx.Param("code")
+	if code == "" {
+		ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			"message": "Code is required",
+		})
+		return
+	}
+	url, err := b.service.GetURL(ctx, code)
+	if err != nil {
+		log.Debug().Msg(err.Error())
+		if errors.Is(err, service.ErrorNotFound) {
+			ctx.JSON(http.StatusNotFound, gin.H{
+				"message": "url not found",
+			})
+			return
+		}
+
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"message": "internal server error",
+		})
+		return
+	}
+	ctx.Redirect(http.StatusTemporaryRedirect, url)
+
 }
